Thu Dec  9 08:00:54 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/Makefile.am reformatted

Thu Dec 09 09:42:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: rc4
	* misc/test-dist.sh: add check for --disable-libiconv
	* src/apps/Makefile.am src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am src/server/Makefile.am src/tds/Makefile.am:
	- libreplacements MUST be included after libtds_objects

Thu Dec  9 00:03:28 EST 2004	JK Lowden <jklowden@schemamania.org>
	* autogen.sh add ident tag

Wed Dec 08 12:00:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4:
	- do not put library dir in LDFLAGS
	* src/apps/Makefile.am src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am src/server/Makefile.am src/tds/Makefile.am:
	- put library in order to search our dirs before (should fix 
	  search order in NetBSD if previous version installed)
	- filter libtds export (this fix problem with old Solaris)

Thu Dec 03 09:37:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* autogen.sh: do not call autoheader if not needed
	* configure.in: bump version

Thu Dec  2 01:19:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* vms/descrip_mms.template s/msdblib_define/dblib_define/

Tue Nov 30 22:50:51 EST 2004	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h include/sybdb.h
	* src/dblib/dblib.c src/dblib/rpc.c
	* src/dblib/unittests/dbmorecmds.c
	- handle empty results sets in dbresults

Tue Nov 30 21:19:06 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am libtds is version 4.0.0

Mon Nov 29 20:45:14 EST 2004	JK Lowden <jklowden@schemamania.org>
	* BUGS README updated for release

Mon Nov 29 20:18:16 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml document MSDBLIB and SYBDBLIB defines.  

Mon Nov 29 09:38:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0012.c: finish merge
