@@ -1,3 +1,6 @@
+Thu Dec 09 17:35:05 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/rpc.c: applied Bill Thompson patch for dblib RPC
+
 Thu Dec  9 08:00:54 EST 2004	JK Lowden <jklowden@schemamania.org>
 	* src/apps/Makefile.am reformatted
 
